// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scheduling cancelBooking 1`] = `Map {}`;

exports[`Scheduling cancelBooking 2`] = `
Map {
  1723680000000 => false,
  1723680900000 => false,
  1723681800000 => false,
  1723682700000 => false,
}
`;

exports[`Scheduling confirmBooking 1`] = `
Map {
  1723680000000 => "Dr Jones",
}
`;

exports[`Scheduling confirmBooking 2`] = `
Map {
  1723680000000 => true,
  1723680900000 => false,
  1723681800000 => false,
  1723682700000 => false,
}
`;

exports[`Scheduling register client 1`] = `
Scheduling {
  "clients": [
    Client {
      "bookings": Map {},
      "name": "Mr Harrison",
    },
  ],
  "providers": [],
  "unconfirmedAppointments": Map {},
}
`;

exports[`Scheduling register provider 1`] = `
Scheduling {
  "clients": [],
  "providers": [
    Provider {
      "appointments": Map {},
      "name": "Dr Jones",
    },
  ],
  "unconfirmedAppointments": Map {},
}
`;

exports[`Scheduling registerBooking 1`] = `
{
  "client": "Mr Harrison",
  "provider": "Dr Jones",
  "slot": 1723680000000,
}
`;
